[package]
name = "mavericks_website_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femme = "2.2.1"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
smol = "1.3.0"
tokio = { version = "1.27.0", features = ["full"] }
warp = { version = "0.3.4", features = ["compression-brotli", "async-compression", "compression"] }
